Fixes extra margin on related-posts on midsize screens

--- a/app/_scss/sections/_expo.scss
+++ b/app/_scss/sections/_expo.scss
@@ -17,7 +17,7 @@
 		.left {
 			flex: 1 1 auto;
 
-			article {
+			article, .related-posts {
 				margin: 0;
 			}
 		}
